<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clientes.EditarClienteActivity">


    <EditText
        android:id="@+id/editar_cliente_editText_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/clientes_editText_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editar_cliente_editText_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/clientes_editText_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editar_cliente_editText_id"
        app:layout_constraintStart_toStartOf="@+id/editar_cliente_editText_id"
        app:layout_constraintTop_toBottomOf="@+id/editar_cliente_editText_id" />

    <EditText
        android:id="@+id/editar_prenda_editText_material"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/clientes_editText_telefono"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editar_cliente_editText_nombre"
        app:layout_constraintStart_toStartOf="@+id/editar_cliente_editText_nombre"
        app:layout_constraintTop_toBottomOf="@+id/editar_cliente_editText_nombre" />

    <Button
        android:id="@+id/editar_cliente_button_crear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp"
        android:text="@string/label_button_Crear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editar_prenda_editText_material" />

    <Button
        android:id="@+id/editar_cliente_button_editar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_button_Editar"
        app:layout_constraintEnd_toEndOf="@+id/editar_cliente_button_crear"
        app:layout_constraintStart_toStartOf="@+id/editar_cliente_button_crear"
        app:layout_constraintTop_toBottomOf="@+id/editar_cliente_button_crear" />

    <Button
        android:id="@+id/editar_cliente_button_borrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_button_Borrar"
        app:layout_constraintEnd_toEndOf="@+id/editar_cliente_button_editar"
        app:layout_constraintStart_toStartOf="@+id/editar_cliente_button_editar"
        app:layout_constraintTop_toBottomOf="@+id/editar_cliente_button_editar" />
</android.support.constraint.ConstraintLayout>

